--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body{
   padding: 0;
   margin: 0;
 }
+hr{
+ border-color: #4d4c4c !important;
+}
 /*menu*/
 .nav-res{
   width: 100px;
@@ -15,12 +18,10 @@ body{
   max-width: 300px;
   height: 100%;
   background-color: black;
-  resize: horizontal;
   overflow: hidden;
   display: inline-block;
   z-index: 3;
 }
-
 .nav-res::-webkit-resizer{
   border-top: 0px;
   border-left: 0px;
@@ -29,8 +30,9 @@ body{
 }
 .lo-no{
   white-space:nowrap;
-  width: 20%;
+  width: 100%;
   height: 49px;
+  margin-bottom: 40px;
 
 }
 .lo-no h1{
@@ -64,6 +66,15 @@ body{
   transform: rotate(20deg);
   border: 2px solid white;
 }
+.arra{
+  position: fixed;
+  z-index: 4;
+  width: 10px;
+  height: 100%;
+  left: 123px;
+  background-color: #48ff0005;
+  cursor: ew-resize;
+}
 @keyframes anima {
   0%{
   transform: scale(1) rotate(20deg);
@@ -89,6 +100,35 @@ body{
   }
 
 }
+.links{
+  width: 100%;
+  height: 49px;
+  margin-top: 30px;
+  white-space: nowrap;
+ overflow: hidden;
+ text-overflow: ellipsis;
+}
+.links a{
+  padding-left: 9px;
+  font-size: 24px;
+  display: inline;
+  color: white;
+  text-decoration: none;
+}
+.links span{
+  font-size: 15px;
+  padding-left: 11px;
+}
+.links a:hover{
+  color: white;
+  text-decoration: none;
+}
+.links a:hover i{
+  color: green;
+}
+.link i{
+  font-size: 4rem !important;
+}
 /*header*/
 header{
   position: fixed;
@@ -102,24 +142,23 @@ header input[type="text"]{
 
 }
 /**/
-header button span{
-  overflow: hidden;
-  position: absolute;
-  width: 69%;
-  height: 100%;
-  top: -25%;
-  left: 13%;
-  font-size: 30px;
-}
 header input[type="text"]:focus{
   border: 2px solid green;
   box-shadow: -1px -1px green;
 }
+
 .pad{
   padding-left: 150px;
 }
+header .input-group button{
+  padding: 0 !important;
+  padding-left: 0.5rem !important;
+  padding-right: 0.5rem !important;
+}
 /*Principal*/
 main{
-  position: absolute;
-  top: 250px;
+  padding-top: 150px;
+}
+footer{
+  background-color: black;
 }
