--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body{
 hr{
  border-color: #4d4c4c !important;
 }
+@media (max-width:350px){
+  .nav-res{
+    display: none !important;
+  }
+}
 /*menu*/
 .nav-res{
   width: 100px;
