--- a/style.css
+++ b/style.css
@@ -10,9 +10,18 @@ body{
 hr{
  border-color: #4d4c4c !important;
 }
-@media (max-width:350px){
+@media (max-width:700px){
   .nav-res{
     display: none !important;
+  }
+  .arra{
+    display: none;
+  }
+  .pad{
+    padding-left: 0 !important;
+  }
+  .pos{
+    display: block !important;
   }
 }
 /*menu*/
@@ -160,6 +169,10 @@ header .input-group button{
   padding-left: 0.5rem !important;
   padding-right: 0.5rem !important;
 }
+.pos{
+  display: none;
+}
+
 /*Principal*/
 main{
   padding-top: 150px;
