--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 hr{
  border-color: #4d4c4c !important;
 }
-@media (max-width:700px){
+@media (max-width:650px){
   .nav-res{
     display: none !important;
   }
@@ -21,6 +21,16 @@ hr{
     padding-left: 0 !important;
   }
   .pos{
+    position: absolute;
+    right: 0%;
+    display: block !important;
+  }
+  header{
+    height: 150px;
+  }
+  header .lo-no{
+    margin-left: 46%;
+    height: 36px;
     display: block !important;
   }
 }
@@ -148,7 +158,8 @@ header{
   position: fixed;
   z-index: 2;
   width: 100%;
-  max-height: 200px;
+
+  max-height: 300px;
   background-color: #000000e8;
 }
 header input[type="text"]{
@@ -172,11 +183,15 @@ header .input-group button{
 .pos{
   display: none;
 }
-
+header .lo-no{
+  margin-bottom: 0;
+  display: none;
+}
 /*Principal*/
 main{
   padding-top: 150px;
 }
 footer{
-  background-color: black;
+  width: 100%;
+  height: 50px;
 }
