--- a/style.css
+++ b/style.css
@@ -1,12 +1,20 @@
 @charset "UTF-8";
 body{
-  background-color:rgb(47 47 47) !important;
+  background-color:rgb(31 31 31) !important;
   color: white !important;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+html {
+    height: 100%;
+    min-height: 100%;
 }
 *{
   padding: 0;
   margin: 0;
 }
+
 hr{
  border-color: #4d4c4c !important;
 }
@@ -19,6 +27,7 @@ hr{
   }
   .pad{
     padding-left: 0 !important;
+    padding-right: 0 !important;
   }
   .pos{
     position: absolute;
@@ -29,7 +38,8 @@ hr{
     height: 150px;
   }
   header .lo-no{
-    margin-left: 46%;
+    margin-left: 50%;
+    transform: translate(-5.5%,0);
     height: 36px;
     display: block !important;
   }
@@ -77,7 +87,7 @@ hr{
   background-color: green;
   border-radius: 100%;
 }
-.logo-img{
+.logo-img,.logo-cpy,.logo-cpy1{
   position: absolute;
   display: inline-block;
   animation: anima 2s alternate-reverse infinite;
@@ -174,6 +184,7 @@ header input[type="text"]:focus{
 
 .pad{
   padding-left: 150px;
+  padding-right: 20px;
 }
 header .input-group button{
   padding: 0 !important;
@@ -191,7 +202,83 @@ header .lo-no{
 main{
   padding-top: 150px;
 }
-footer{
+.conteu{
   width: 100%;
-  height: 50px;
+  position: relative;
+  white-space:nowrap;
+  overflow: hidden;
+
+}
+.show-all{
+  position: absolute;
+  top: 0%;
+  right: 0%;
+}
+.mus-play{
+  display:inline-block;
+  position: relative;
+  margin-right: 15px;
+  width: 150px;
+  height: 200px;
+  border-radius: 10px;
+}
+.mus-play:hover{
+  text-decoration: none !important;
+  background-color: rgb(22 22 22);
+}
+.img-mus{
+  position: relative;
+  border-radius: 10px;
+  width: 90%;
+  margin: 8px;
+  height: 90%;
+  background-color: black;
+}
+.img-mus p{
+  padding-top: 20px;
+  font-size: 10px;
+  text-decoration: none !important;
+  color: white !important;
+}
+.but-play{
+  background-color: green;
+  position: absolute;
+  padding-top: 4px;
+  padding-left: 10px;
+  border-radius: 100px;
+  width: 30px;
+  height: 30px;
+  top: 50%;
+  left: 70%;
+  z-index: 1;
+  text-decoration: none !important;
+  color: black !important;
+}
+.mus-play img{
+  width: 100%;
+  height: 115px;
+  border-radius: 10px;
+}
+/**/
+footer{
+  margin-top: auto;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  width: 100%;
+  background-color: black;
+}
+footer  .logo-img{
+  animation:none;
+}
+footer  .logo-cpy{
+  left: 16px;
+  transform: rotate(154deg);
+  animation:none;
+}
+footer  .logo-cpy1{
+  animation:none;
+  left: 24px;
+}
+table{
+  background-color: #000000 !important;
 }
