--- a/style.css
+++ b/style.css
@@ -7,8 +7,18 @@ body{
   min-height: 100%;
 }
 html {
-    height: 100%;
-    min-height: 100%;
+  height: 100%;
+  min-height: 100%;
+}
+*::-webkit-scrollbar{
+  width: 8px;
+  height: 8px;
+  background-color:rgb(20 20 20);
+
+}
+*::-webkit-scrollbar-thumb {
+  background: #333333;
+  border-radius: 5px;
 }
 *{
   padding: 0;
@@ -16,7 +26,7 @@ html {
 }
 
 hr{
- border-color: #4d4c4c !important;
+  border-color: #4d4c4c !important;
 }
 @media (max-width:650px){
   .nav-res{
@@ -114,7 +124,7 @@ hr{
 }
 @keyframes anima {
   0%{
-  transform: scale(1) rotate(20deg);
+    transform: scale(1) rotate(20deg);
   }
   20%{
     transform: scale(0) rotate(20deg);
@@ -142,8 +152,8 @@ hr{
   height: 49px;
   margin-top: 30px;
   white-space: nowrap;
- overflow: hidden;
- text-overflow: ellipsis;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .links a{
   padding-left: 9px;
@@ -208,10 +218,14 @@ main{
 .conteu{
   width: 100%;
   position: relative;
-  white-space:nowrap;
-  overflow: hidden;
-
 }
+.player-div{
+  position: relative;
+  white-space:nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
 .show-all{
   position: absolute;
   top: 0%;
